@@ -1,3 +1,12 @@
+2002-07-18 Denis Chertykov  <denisc@overta.ru>
+	   Frank Ch. Eigler  <fche@redhat.com>
+
+	* readelf.c: Include "elf/ip2k.h".
+	(guess_is_rela): Add support for EM_IP2K and EM_IP2K_OLD.
+	(dump_relocations): Likewise.
+	(get_machine_name): Likewise.
+	* NEWS: Mention IP2K support.
+
 2002-07-16  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* NEWS: Add 'Changes in 2.13'.
